# Silicon-Studio

./: .gitignore  README.md  models.json  package-lock.json  package.json
.github/workflows/: ci.yml  docs.yml  release.yml
backend/: main.py  pyproject.toml
backend/app/agents/: service.py
backend/app/agents/nanocore/: parser.py  prompts.py  supervisor.py  tools.py  types.py
backend/app/api/: agents.py  conversations.py  deployment.py  engine.py  indexer.py  mcp.py  notes.py  preparation.py  rag.py  sandbox.py  search.py  terminal.py
backend/app/conversations/: service.py
backend/app/engine/: service.py
backend/app/mcp/: client.py  registry.py  service.py
backend/app/monitor/: system.py
backend/app/notes/: service.py
backend/app/preparation/: service.py
backend/app/rag/: embeddings.py  service.py
backend/app/sandbox/: service.py
backend/app/search/: indexer.py
backend/app/shield/: service.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_conversations.py  test_deployment.py  test_engine.py  test_indexer.py  test_monitor.py  test_parser.py  test_preparation.py  test_rag.py  test_sandbox.py  test_shield.py
docs/: changelog.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: agents.md  chat.md  conversations.md  deployment.md  engine.md  mcp.md  monitor.md  notes.md  overview.md  preparation.md  rag.md  sandbox.md  search.md
docs/development/: contributing.md  project-structure.md  setup.md
docs/features/: agents.md  chat.md  data-preparation.md  deployment.md  (+8 more)
resources/: icon.icns
(+42 files in other folders)
